--- a/frontend/src/app/sidebar/sidebar.component.css
+++ b/frontend/src/app/sidebar/sidebar.component.css
@@ -1,7 +1,6 @@
 .sidebar {
   margin: 0 12px;
   margin-top: -22px;
-  width: 540px;
   padding-bottom: 0;
 }
 
